<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".AddActivity"
        android:id="@+id/layoutAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addPhoto"
            android:clickable="true"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@+id/upper"
            app:layout_anchorGravity="bottom|right"
            app:elevation="5dp"
            app:srcCompat="@drawable/ic_add_a_photo_white_24px" />

        <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="266dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="46dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/name"
            android:contentDescription="@string/iconName"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="11dp"
            android:layout_width="24dp"
            android:layout_height="24dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editName"
                android:hint="@string/flower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:paddingBottom="16dp"
                android:layout_marginBottom="0dp"
                android:textSize="16sp" />
            <TextView
                android:layout_marginTop="0dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorError"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_marginRight="11dp"
        android:contentDescription="@string/iconLevel"
        android:src="@drawable/ease"
        android:layout_width="24dp"
        android:layout_height="24dp" />
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/editEase"
                android:spinnerMode="dialog"
                android:layout_marginLeft="-5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/levels"
                android:prompt="@string/levels_prompt"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/instructions"
            android:contentDescription="@string/iconInst"
            android:layout_marginRight="11dp"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editInst"
                android:hint="@string/inst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:isScrollContainer="true"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical"
            android:weightSum="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photoView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/iconPic"
                android:scaleType="centerCrop"
                android:src="@drawable/flower" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/rounded_corner" />

                <Button
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_cancel_white_24px"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:translationZ="10dp"
                    android:stateListAnimator="@null"
                    android:layout_gravity="left"
                    android:layout_marginLeft="75dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/clear_button" />

            </FrameLayout>

            <TextView
                android:id="@+id/urlField"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/deletePhoto"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/keyField"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>